updated contact page with a link

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,8 @@
         Contact
     </h1>
 
-    <a href="contact.html">
-        contact me
+    <a href="index.html">
+        homepage
     </a>
 
 </body>
